@@ -38,6 +38,7 @@ exception statement from your version.  */
 
 package gnu.javax.crypto.keyring;
 
+import gnu.java.security.Configuration;
 import gnu.java.security.Registry;
 import gnu.java.security.prng.IRandom;
 import gnu.java.security.prng.LimitReachedException;
@@ -66,17 +67,12 @@ import java.util.logging.Logger;
 /**
  * An envelope that is encrypted with a password-derived key.
  */
-public class PasswordEncryptedEntry extends MaskableEnvelopeEntry implements
-    PasswordProtectedEntry, Registry
+public class PasswordEncryptedEntry
+    extends MaskableEnvelopeEntry
+    implements PasswordProtectedEntry, Registry
 {
-  // Constants and fields.
-  // ------------------------------------------------------------------------
-
   private static final Logger log = Logger.getLogger(PasswordEncryptedEntry.class.getName());
   public static final int TYPE = 1;
-
-  // Constructors.
-  // ------------------------------------------------------------------------
 
   public PasswordEncryptedEntry(String cipher, String mode, int keylen,
                                 Properties properties)
@@ -84,9 +80,7 @@ public class PasswordEncryptedEntry extends MaskableEnvelopeEntry implements
     super(TYPE, properties);
     if ((cipher == null || cipher.length() == 0)
         || (mode == null || mode.length() == 0))
-      {
-        throw new IllegalArgumentException("cipher nor mode can be empty");
-      }
+      throw new IllegalArgumentException("cipher nor mode can be empty");
     this.properties.put("cipher", cipher);
     this.properties.put("mode", mode);
     this.properties.put("keylen", String.valueOf(keylen));
@@ -98,9 +92,6 @@ public class PasswordEncryptedEntry extends MaskableEnvelopeEntry implements
     super(TYPE);
     setMasked(true);
   }
-
-  // Class methods.
-  // ------------------------------------------------------------------------
 
   public static PasswordEncryptedEntry decode(DataInputStream in,
                                               char[] password)
@@ -126,16 +117,14 @@ public class PasswordEncryptedEntry extends MaskableEnvelopeEntry implements
     return entry;
   }
 
-  // Instance methods.
-  // ------------------------------------------------------------------------
-
   public void decrypt(char[] password) throws IllegalArgumentException,
       WrongPaddingException
   {
-    log.entering(this.getClass().getName(), "decrypt");
+    if (Configuration.DEBUG)
+      log.entering(this.getClass().getName(), "decrypt");
     if (isMasked() && payload != null)
       {
-        long tt = - System.currentTimeMillis();
+        long tt = -System.currentTimeMillis();
         IMode mode = getMode(password, IMode.DECRYPTION);
         IPad padding = PadFactory.getInstance("PKCS7");
         padding.init(mode.currentBlockSize());
@@ -147,11 +136,9 @@ public class PasswordEncryptedEntry extends MaskableEnvelopeEntry implements
             count += mode.currentBlockSize();
           }
         int padlen = padding.unpad(buf, 0, buf.length);
-
         setMasked(false);
-
-        ByteArrayInputStream baos = new ByteArrayInputStream(buf, 0,
-                                                             buf.length - padlen);
+        int len = buf.length - padlen;
+        ByteArrayInputStream baos = new ByteArrayInputStream(buf, 0, len);
         DataInputStream in = new DataInputStream(baos);
         try
           {
@@ -162,23 +149,25 @@ public class PasswordEncryptedEntry extends MaskableEnvelopeEntry implements
             throw new IllegalArgumentException("decryption failed");
           }
         tt += System.currentTimeMillis();
-        log.finer("Decrypted in " + tt + "ms.");
+        log.fine("Decrypted in " + tt + "ms.");
       }
-    else
-      log.finer("Skip decryption; " + (isMasked() ? "null payload" : "unmasked"));
-    log.exiting(this.getClass().getName(), "decrypt");
+    else if (Configuration.DEBUG)
+      log.fine("Skip decryption; " + (isMasked() ? "null payload" : "unmasked"));
+    if (Configuration.DEBUG)
+      log.exiting(this.getClass().getName(), "decrypt");
   }
 
   public void encrypt(char[] password) throws IOException
   {
-    log.entering(this.getClass().getName(), "encrypt", String.valueOf(password));
-    long tt = - System.currentTimeMillis();
-    long t1 = - System.currentTimeMillis();
-
+    if (Configuration.DEBUG)
+      log.entering(this.getClass().getName(), "encrypt", String.valueOf(password));
+    long tt = -System.currentTimeMillis();
+    long t1 = -System.currentTimeMillis();
     byte[] salt = new byte[8];
     PRNG.getInstance().nextBytes(salt);
     t1 += System.currentTimeMillis();
-    log.finer("-- Generated salt in " + t1 + "ms.");
+    if (Configuration.DEBUG)
+      log.fine("-- Generated salt in " + t1 + "ms.");
     properties.put("salt", Util.toString(salt));
     IMode mode = getMode(password, IMode.ENCRYPTION);
     IPad pad = PadFactory.getInstance("PKCS7");
@@ -188,11 +177,13 @@ public class PasswordEncryptedEntry extends MaskableEnvelopeEntry implements
     for (Iterator it = entries.iterator(); it.hasNext();)
       {
         Entry entry = (Entry) it.next();
-        log.finer("-- About to encode one " + entry);
-        t1 = - System.currentTimeMillis();
+        if (Configuration.DEBUG)
+          log.fine("-- About to encode one " + entry);
+        t1 = -System.currentTimeMillis();
         entry.encode(out2);
         t1 += System.currentTimeMillis();
-        log.finer("-- Encoded an Entry in " + t1 + "ms.");
+        if (Configuration.DEBUG)
+          log.fine("-- Encoded an Entry in " + t1 + "ms.");
       }
     byte[] plaintext = bout.toByteArray();
     byte[] padding = pad.pad(plaintext, 0, plaintext.length);
@@ -208,12 +199,13 @@ public class PasswordEncryptedEntry extends MaskableEnvelopeEntry implements
         count += mode.currentBlockSize();
       }
     mode.update(lastBlock, 0, payload, count);
-
     setMasked(true);
-
     tt += System.currentTimeMillis();
-    log.finer("Encrypted in " + tt + "ms.");
-    log.exiting(this.getClass().getName(), "encrypt");
+    if (Configuration.DEBUG)
+      {
+        log.fine("Encrypted in " + tt + "ms.");
+        log.exiting(this.getClass().getName(), "encrypt");
+      }
   }
 
   public void encode(DataOutputStream out, char[] password) throws IOException
@@ -226,61 +218,46 @@ public class PasswordEncryptedEntry extends MaskableEnvelopeEntry implements
   {
     if (payload == null)
       {
-        log.fine("Null payload: " + this);
+        if (Configuration.DEBUG)
+          log.fine("Null payload: " + this);
         throw new IllegalStateException("not encrypted");
       }
   }
-
-  // Own methods.
-  // ------------------------------------------------------------------------
 
   private IMode getMode(char[] password, int state)
   {
     String s = properties.get("salt");
     if (s == null)
-      {
-        throw new IllegalArgumentException("no salt");
-      }
+      throw new IllegalArgumentException("no salt");
     byte[] salt = Util.toBytesFromString(s);
     IBlockCipher cipher = CipherFactory.getInstance(properties.get("cipher"));
     if (cipher == null)
-      {
-        throw new IllegalArgumentException("no such cipher: "
-                                           + properties.get("cipher"));
-      }
+      throw new IllegalArgumentException("no such cipher: "
+                                         + properties.get("cipher"));
     int blockSize = cipher.defaultBlockSize();
     if (properties.containsKey("block-size"))
-      {
-        try
-          {
-            blockSize = Integer.parseInt(properties.get("block-size"));
-          }
-        catch (NumberFormatException nfe)
-          {
-            throw new IllegalArgumentException("bad block size: "
-                                               + nfe.getMessage());
-          }
-      }
-    IMode mode = ModeFactory.getInstance(properties.get("mode"), cipher,
-                                         blockSize);
+      try
+        {
+          blockSize = Integer.parseInt(properties.get("block-size"));
+        }
+      catch (NumberFormatException nfe)
+        {
+          throw new IllegalArgumentException("bad block size: "
+                                             + nfe.getMessage());
+        }
+    String modeName = properties.get("mode");
+    IMode mode = ModeFactory.getInstance(modeName, cipher, blockSize);
     if (mode == null)
-      {
-        throw new IllegalArgumentException("no such mode: "
-                                           + properties.get("mode"));
-      }
-
+      throw new IllegalArgumentException("no such mode: " + modeName);
     HashMap pbAttr = new HashMap();
     pbAttr.put(IPBE.PASSWORD, password);
     pbAttr.put(IPBE.SALT, salt);
     pbAttr.put(IPBE.ITERATION_COUNT, ITERATION_COUNT);
     IRandom kdf = PRNGFactory.getInstance("PBKDF2-HMAC-SHA");
     kdf.init(pbAttr);
-
     int keylen = 0;
-    if (!properties.containsKey("keylen"))
-      {
-        throw new IllegalArgumentException("no key length");
-      }
+    if (! properties.containsKey("keylen"))
+      throw new IllegalArgumentException("no key length");
     try
       {
         keylen = Integer.parseInt(properties.get("keylen"));
@@ -301,7 +278,7 @@ public class PasswordEncryptedEntry extends MaskableEnvelopeEntry implements
       }
     HashMap modeAttr = new HashMap();
     modeAttr.put(IMode.KEY_MATERIAL, dk);
-    modeAttr.put(IMode.STATE, new Integer(state));
+    modeAttr.put(IMode.STATE, Integer.valueOf(state));
     modeAttr.put(IMode.IV, iv);
     try
       {
